codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apply_patch_manual_flow_history_approved.snap
---
source: tui/src/chatwidget/tests.rs
expression: lines_to_single_string(&approved_lines)
---
Added(foo.txt)
Added 1 lines, removed 0 lines
1 + hello
