codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
• I’m going to search the repo for where “Change Approved” is rendered to update
  that view.

• Explored
  └ Search Change Approved
    Read diff_render.rs

• Investigating rendering code · gpt-5.2-codex (reasoning default) · (0s • esc t


› Summarize recent commits

  gpt-5.2-codex default · 100% left · ~/Developer/Projects/codex/codex-rs/tui
